# fastapi_template

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: run_debug.sh
src/fastapi_best_practice/: api.py  config.py  extentions.py  logging.py  logging.yml  main.py  middlewares.py  models.py
src/fastapi_best_practice/auth/: services.py
src/fastapi_best_practice/database/: core.py  manage.py
src/fastapi_best_practice/item/: models.py  service.py  views.py
src/fastapi_best_practice/product/: models.py  service.py  views.py
src/fastapi_best_practice/settings/: models.py  service.py  views.py
