[tool.poetry]
name = "fastapi-best-practice"
version = "0.1.0"
description = ""
authors = ["Moshe Reubinoff <moshe@ownbackup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.6.5"
click = "^8.0.1"
fastapi = "^0.66.0"
SQLAlchemy = "^1.4.21"
hydra-core = "^1.1.0"
uvicorn = "^0.14.0"
sentry-sdk = "^1.3.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
sentry-asgi = "^0.2.0"
SQLAlchemy-Utils = "^0.37.8"
aiohttp = "^3.7.4"
sqlalchemy-filters = "^0.12.0"
colorlog = "^5.0.1"
fastapi-versioning = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
